<resources>
    <string name="app_name">Vintage Values</string>
    <string name="logout">Logout</string>
    <string name="email">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    %[argument_index$][flags][width][.precision]conversion
    <string name="hello">Welcome %1$s!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Pickup Address</string>
    <string name="requestPickup">Request Pickup</string>
    <string name="number_of_donations">Number of Bags Donating</string>
    <string name="location_description">Give a description of your location...</string>
    <string name="submit">Submit Request</string>
    <string name="requestReceipts">Requested Receipts:</string>
    <string name="first_name_label">First name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="created_on">Created on %1$s</string>
    <string name="bag_request_label">Requested bags:</string>
    <string name="location_description_label">Location description:</string>
    <string name="request_pickup_activity_name">Request Pickup</string>
    <string name="request_detail_activity_name">Request Detail</string>
    <string name="names_label">Name:</string>
    <string name="first_names_label">First Name:</string>
    <string name="last_names_label">Last Name:</string>
    <string name="num_bags_donating">Number of bags donating:</string>
    <string name="location_description_title">Location specified:</string>
    <string name="requested_on">Requested on:</string>
    <string name="edit_requests_button">Edit Request</string>
    <string name="save_edits_button">Save Edits</string>
    <string name="delete_text">Delete</string>
    <string name="fulfill_pick_up">Fulfill Pickup</string>
    <string name="YES">YES</string>
    <string name="accept_request">Do you want to accept this pickup request?</string>
    <string name="view_current_pickups">View Current Pickups</string>
    <string name="current_pickups">Current Pickups:</string>
    <string name="pickup_conformation">Have you successfully picked up the donation?</string>
    <string name="image_text_instructions">Please upload a picture of the bags location:</string>
    <string name="bag_image_description">A picture of the bags being donated</string>
    <string name="fulfill_pick_up_name">Fulfill Pickup</string>
    <string name="fulfill_pick_up_detail_name">Fulfill Pickup Detail</string>
    <string name="current_pickups_name">Current Pickups</string>
    <string name="has_request_been_fulfilled_label">Request status:</string>
    <string name="has_been_completed">Your request has been completed! Thank you for your donation!</string>
    <string name="has_been_accepted">Your request has been accepted! It will be picked up soon!</string>
    <string name="has_not_been_accepted">Your request has not been accepted yet.</string>
    <string name="request_pickup_description">Want to make a donation? Request a pickup!</string>
    <string name="fulfill_pickup_description">Want to pickup a donation for Vintage Values? Find a request here.</string>
    <string name="current_pickup_description">View your current pickups.</string>
</resources>
