<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FulfillPickupDetail">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_names_label"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name_label_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="12"
        app:layout_constraintLeft_toRightOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="@id/name_label"
        app:layout_constraintBottom_toBottomOf="@id/name_label"/>

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_names_label"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/name_label"
        app:layout_constraintTop_toBottomOf="@id/name_label"/>

    <TextView
        android:id="@+id/last_name_label_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="12"
        app:layout_constraintLeft_toRightOf="@+id/last_name_label"
        app:layout_constraintTop_toTopOf="@id/last_name_label"
        app:layout_constraintBottom_toBottomOf="@id/last_name_label"/>

    <TextView
        android:id="@+id/bags_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_bags_donating"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/last_name_label"
        app:layout_constraintTop_toBottomOf="@+id/last_name_label"/>

    <TextView
        android:id="@+id/bags_label_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/bags_label"
        app:layout_constraintTop_toTopOf="@+id/bags_label"
        app:layout_constraintBottom_toBottomOf="@id/bags_label"/>

    <TextView
        android:id="@+id/location_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_description_title"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/bags_label"
        app:layout_constraintTop_toBottomOf="@+id/bags_label"/>

    <TextView
        android:id="@+id/location_description_label_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/location_description_label"
        app:layout_constraintTop_toBottomOf="@+id/location_description_label"/>

    <TextView
        android:id="@+id/time_stamp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/requested_on"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_description_label_items"/>

    <TextView
        android:id="@+id/time_stamp_label_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@+id/time_stamp_label"
        app:layout_constraintTop_toTopOf="@+id/time_stamp_label"/>

    <ImageView
        android:id="@+id/fulfill_bag_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bag_image_description"
        app:layout_constraintTop_toBottomOf="@+id/time_stamp_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/accept_request"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yes_button"
        app:layout_constraintLeft_toLeftOf="@+id/yes_button"
        app:layout_constraintRight_toRightOf="@+id/yes_button"/>

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YES"
        android:layout_marginBottom="20dp"
        android:onClick="onYesButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>