<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestDetailActivity">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names_label"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name_label_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bags_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_bags_donating"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label"/>

    <TextView
        android:id="@+id/bags_label_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@+id/bags_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label_items"/>

    <TextView
        android:id="@+id/location_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_description_title"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/bags_label"
        app:layout_constraintTop_toBottomOf="@+id/bags_label"/>

    <TextView
        android:id="@+id/location_description_label_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/location_description_label"
        app:layout_constraintTop_toBottomOf="@+id/location_description_label"/>

    <TextView
        android:id="@+id/time_stamp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/requested_on"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/location_description_label_items"
        app:layout_constraintTop_toBottomOf="@+id/location_description_label_items"/>

    <TextView
        android:id="@+id/time_stamp_label_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@+id/time_stamp_label"
        app:layout_constraintTop_toTopOf="@+id/time_stamp_label"/>

</androidx.constraintlayout.widget.ConstraintLayout>